Return assets and liabilities in responses and allow creation and update of relationships
