# server/api/services/applications.service.js
@@ -2,25 +2,38 @@ import Application from '../entities/Application';
 
 class ApplicationsService {
   async findAll() {
-    return await Application.findAll();
+    return await Application.findAll({
+      include: ['assets', 'liabilities'],
+    });
   }
 
   async findById(id) {
-    return await Application.findByPk(id);
+    return await Application.findByPk(id, {
+      include: ['assets', 'liabilities'],
+    });
   }
 
   async create(application) {
-    return await Application.create(application);
+    return await Application.create(application, {
+      include: ['assets', 'liabilities'],
+    });
   }
 
   async deleteById(id) {
-    return await Application.destroy({ where: { id } });
+    return await Application.destroy({
+      include: ['assets', 'liabilities'],
+      where: { id },
+    });
   }
 
-  async updateById(id, application) {
-    await Application.update(application, { where: { id } });
+  async updateById(id, updates) {
+    const application = await this.findById(id);
 
-    return this.findById(id);
+    if (application) {
+      return await application.update(updates);
+    }
+
+    return false;
   }
 }
 
